se agrego historia y divs con id para el css luego

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
   <body>
     <h1>ping pong academy</h1>
     <h2>Pagina pricipal de ping pong academy</h2>
-    <div>
-      <p>
-        Un poco de historia sobre el ping pong academy. 
-
+    
+      <h3>Un poco de historia sobre <b>ping pong academy.</b></h3> 
+      <div id="historia">
+      <p> 
+      <b><u>ping pong academy</u></b> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
       </p>
+      </div>
+      <div>
+        
+      </div>
       <div id="redes">
         <h3>Redes sociales</h3>
         <ul>
@@ -22,6 +27,5 @@
           <li><a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a></li>
         </ul>
       </div>
-    </div>
   </body>
 </html>
