--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ping pong academy</title>
@@ -12,11 +13,11 @@
       <h3>Un poco de historia sobre <b>ping pong academy.</b></h3> 
       <div id="historia">
       <p> 
-      <b><u>ping pong academy</u></b> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
+      <strong>ping pong academy</strong> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
       </p>
-      </div>
+      </div id="clubes">
       <div>
-        
+        <a href=""><img src="" alt=""></a>
       </div>
       <div id="redes">
         <h3>Redes sociales</h3>
@@ -27,5 +28,6 @@
           <li><a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a></li>
         </ul>
       </div>
+      <script src="main.js"></script>
   </body>
 </html>
