--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <h1>ping pong academy</h1>
     <h2>Pagina pricipal de ping pong academy</h2>
-    
       <h3>Un poco de historia sobre <b>ping pong academy.</b></h3> 
       <div id="historia">
       <p> 
@@ -22,8 +21,8 @@
       <div id="redes">
         <h3>Redes sociales</h3>
         <ul>
-          <li><a href="" target="_blank">Instagram</a></li>
-          <li><a href="" target="_blank">Facebook</a></li>
+          <li><a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a></li>
+          <li><a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a></li>
           <li><a href="" target="https://www.facebook.com/profile.php?id=61575080571143"_blank">tiktok</a></li>
           <li><a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a></li>
         </ul>
