--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
       <strong>ping pong academy</strong> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
       </p>
       </div id="clubes">
-      <h3>centros de entrenamiento</h3>
-        <a href="cms.html">centro militar salinas</a>
-        <a href="i_sud.html">iglesia sud</a>
-        <a href="parque_del_plata.html">casa parque del parque_del_plata</a>
+        <h3>centros de entrenamiento</h3>
+          <a href="cms.html">centro militar salinas</a>
+          <a href="i_sud.html">iglesia sud</a>
+          <a href="parque_del_plata.html">casa parque del parque_del_plata</a>
       <div>
         <a href=""><img src="" alt=""></a>
       </div>
       <div id="redes">
         <h3>Redes sociales</h3>
-        <ul>
-          <li><a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a></li>
-          <li><a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a></li>
-          <li><a href="" target="https://www.facebook.com/profile.php?id=61575080571143"_blank">tiktok</a></li>
-          <li><a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a></li>
+          <a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a>
+          <a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a>
+          <a href="" target="https://www.facebook.com/profile.php?id=61575080571143"_blank">tiktok</a>
+          <a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a>
         </ul>
       </div>
       <script src="main.js"></script>
