mejora en el index
se agrego un header y un nav para las redes sociales; se colocaron secciones y se corrigieron errores menores

--- a/index.html
+++ b/index.html
@@ -3,33 +3,41 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>ping pong academy</title>
   </head>
   <body>
+    <header>
+      <nav>
+      <div id="redes">
+          <a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a>
+          <a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a>
+          <a href="https://www.tiktok.com/@ping.pong.academy.uru" target="_blank">tiktok</a>
+          <a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a>
+      </nav>
+      </div>
+    </header>
+    <section>
     <h1>ping pong academy</h1>
     <h2>Pagina pricipal de ping pong academy</h2>
-      <h3>Un poco de historia sobre <b>ping pong academy.</b></h3> 
+      <h3>Un poco de historia sobre ping pong academy</h3> 
       <div id="historia">
       <p> 
       <strong>ping pong academy</strong> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
       </p>
-      </div id="clubes">
+      </div>
+    </section>
+    </div id="clubes">
+      <section>
         <h3>centros de entrenamiento</h3>
-          <a href="cms.html">centro militar salinas</a>
-          <a href="i_sud.html">iglesia sud</a>
-          <a href="parque_del_plata.html">casa parque del parque_del_plata</a>
-      <div>
-        <a href=""><img src="" alt=""></a>
-      </div>
-      <div id="redes">
-        <h3>Redes sociales</h3>
-          <a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a>
-          <a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a>
-          <a href="" target="https://www.facebook.com/profile.php?id=61575080571143"_blank">tiktok</a>
-          <a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a>
+        <ul>
+          <li><a href="cms.html">centro militar salinas</a></li>
+          <li><a href="i_sud.html">iglesia sud</a></li>
+          <li><a href="parque_del_plata.html">casa parque del parque_del_plata</a></li>
         </ul>
-      </div>
+      </section>
+    </div>
+      
       <script src="main.js"></script>
   </body>
 </html>
