--- a/index.html
+++ b/index.html
@@ -14,30 +14,24 @@
           <a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a>
           <a href="https://www.tiktok.com/@ping.pong.academy.uru" target="_blank">tiktok</a>
           <a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a>
+      </div>
+      </div id="clubes">
+          <a href="cms.html">centro militar salinas</a>
+          <a href="i_sud.html">iglesia sud</a>
+          <a href="parque_del_plata.html">casa parque del parque_del_plata</a>
+      </div>
       </nav>
-      </div>
-    </header>
-    <section>
-    <h1>ping pong academy</h1>
-    <h2>Pagina pricipal de ping pong academy</h2>
-      <h3>Un poco de historia sobre ping pong academy</h3> 
       <div id="historia">
-      <p> 
-      <strong>ping pong academy</strong> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
-      </p>
-      </div>
-    </section>
-    </div id="clubes">
+      </header>
       <section>
-        <h3>centros de entrenamiento</h3>
-        <ul>
-          <li><a href="cms.html">centro militar salinas</a></li>
-          <li><a href="i_sud.html">iglesia sud</a></li>
-          <li><a href="parque_del_plata.html">casa parque del parque_del_plata</a></li>
-        </ul>
+        <h1>ping pong academy</h1>
+        <h2>Pagina pricipal de ping pong academy</h2>
+        <h3>Un poco de historia sobre ping pong academy</h3> 
+        <p> 
+          <strong>ping pong academy</strong> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
+        </p>
+      </div>
       </section>
-    </div>
-      
       <script src="main.js"></script>
   </body>
 </html>
