--- a/index.html
+++ b/index.html
@@ -7,22 +7,22 @@
     <title>ping pong academy</title>
   </head>
   <body>
+    <main>
     <header>
+      <!-- seccion de navegacion -->
       <nav>
       <div id="redes">
+        <section>
           <a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a>
           <a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a>
           <a href="https://www.tiktok.com/@ping.pong.academy.uru" target="_blank">tiktok</a>
           <a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a>
-      </div>
-      </div id="clubes">
-          <a href="cms.html">centro militar salinas</a>
-          <a href="i_sud.html">iglesia sud</a>
-          <a href="parque_del_plata.html">casa parque del parque_del_plata</a>
+        </section>
       </div>
       </nav>
-      <div id="historia">
       </header>
+      <!-- seccion de bienvenida -->
+      <div id="historia">
       <section>
         <h1>ping pong academy</h1>
         <h2>Pagina pricipal de ping pong academy</h2>
@@ -32,6 +32,16 @@
         </p>
       </div>
       </section>
+      <!-- seccion de clubes -->
+    <footer>
+      </div id="clubes">
+      <h3>los clubes de ping pong academy</h3>
+      <a href="cms.html"><img src="" alt="">centro militar salinas</a>
+      <a href="i_sud.html"><img src="" alt="">iglesia sud</a>
+      <a href="parque_del_plata.html"><img src="" alt="">casa parque del parque_del_plata</a>
+  </div>
+  </footer>
+    </main>
       <script src="main.js"></script>
   </body>
 </html>
