reinicio de proyecto
se reinicio el proyecto usando de base una platilla

--- a/index.html
+++ b/index.html
@@ -1,47 +1,169 @@
 <!DOCTYPE html>
-<html lang="es">
-  <head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ping Pong Academy</title>
     <link rel="stylesheet" href="style.css">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>ping pong academy</title>
-  </head>
-  <body>
-    <main>
+</head>
+<body>
     <header>
-      <!-- seccion de navegacion -->
-      <nav>
-      <div id="redes">
-        <section>
-          <a href="https://www.instagram.com/ping_pong_academy_uru/" target="_blank">Instagram</a>
-          <a href="https://www.facebook.com/profile.php?id=61575080571143" target="_blank">Facebook</a>
-          <a href="https://www.tiktok.com/@ping.pong.academy.uru" target="_blank">tiktok</a>
-          <a href="https://www.youtube.com/@Pingpongacademy-z7m" target="_blank">youtube</a>
-        </section>
-      </div>
-      </nav>
-      </header>
-      <!-- seccion de bienvenida -->
-      <div id="historia">
-      <section>
-        <h1>ping pong academy</h1>
-        <h2>Pagina pricipal de ping pong academy</h2>
-        <h3>Un poco de historia sobre ping pong academy</h3> 
-        <p> 
-          <strong>ping pong academy</strong> nace como una forma de unificar los distintos centros de entrenamiento donde poder enseñar sobre el ping pong utilizando las redes para potenciar dicho proyecto 
-        </p>
-      </div>
-      </section>
-      <!-- seccion de clubes -->
-    <footer>
-      </div id="clubes">
-      <h3>los clubes de ping pong academy</h3>
-      <a href="cms.html"><img src="" alt="">centro militar salinas</a>
-      <a href="i_sud.html"><img src="" alt="">iglesia sud</a>
-      <a href="parque_del_plata.html"><img src="" alt="">casa parque del parque_del_plata</a>
-  </div>
-  </footer>
+        <h1>Ping Pong Academy</h1>   
+        <div class="nav-links">
+            <a href="#planes">Planes</a>
+            <a href="#contacto">Contacto</a>
+            <a href="#ubicaciones">Ubicaciones</a>
+        </div>
+    </header>
+    <main>
+        <div class="inicio">
+            <img src="Ma-removebg-preview.png" alt="" class="imginicio">
+            <article class="intro">
+                <h2>Ping Pong Academy</h2>
+                <p>¡Descubrí tu pasión por el tenis de mesa con nosotros! En nuestra academia entrenás con profesionales, mejorás tu técnica y te divertís en un ambiente amigable y motivador. Clases para todas las edades y niveles, con enfoque en el progreso personal y el juego en equipo. ¡Unite y junto llevemos el deporte a otro nivel!</p>
+            </article>
+        </div>
+    
+
+        <div id="planes">
+            <h1 class="plan_text">Nuestros Planes</h1>
+
+            <div class="contenedor_planes">
+                <div class="plan_basico">
+                    <article class="info_planes">
+                        <h2>Plan Básico</h2>
+                        <img class= "paleta" src="png-transparent-ping-pong-paddles-sets-racket-butterfly-sporting-goods-table-tennis-sport-insects-table-tennis-racket.png" alt="">
+                        <p class="texto">Pensado para quienes se inician en el tenis de mesa o buscan una actividad recreativa. Incluye dos clases semanales de una hora con un instructor, acceso a mesas y raquetas estándar, y la posibilidad de participar en torneos internos amistosos.</p>
+                        <div class="linea_2">
+                            <h3 class="precios">28US$/mes</h3>
+                            <h3 class="boton">Incribirse</h3>
+                        </div>
+                    </article>
+                </div>
+
+                <div class="plan_intermedio">
+                    <article class="info_planes">
+                        <h2>Plan Intermedio</h2>
+                        <img class= "paleta" src="png-transparent-ping-pong-paddles-sets-racket-butterfly-sporting-goods-table-tennis-sport-insects-table-tennis-racket.png" alt="">
+                        <p class="texto">Dirigido a jugadores con experiencia que desean mejorar su técnica y rendimiento. Ofrece tres sesiones semanales de una hora y media, con entrenamientos centrados en técnica avanzada y estrategia de juego.</p>
+                        <div class="linea_2">
+                            <h3 class="precios">45US$/mes</h3>
+                            <h3 class="boton">Incribirse</h3>
+                        </div>
+                    </article>
+                </div>
+
+                <div class="plan_pro">
+                    <article class="info_planes">
+                        <h2>Plan Pro</h2>
+                        <img class="paleta" src="png-transparent-ping-pong-paddles-sets-racket-butterfly-sporting-goods-table-tennis-sport-insects-table-tennis-racket.png" alt="">
+                        <p>Diseñado para jugadores competitivos que entrenan con objetivos profesionales. Brinda cinco sesiones semanales de dos horas, con entrenadores especializados, trabajo físico y preparación táctica.</p>
+                        <div class="linea_2">
+                            <h3 class="precios">60US$/mes</h3>
+                            <h3 class="boton">Incribirse</h3>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+
+
+        <div id="contacto">
+            <img src="Alexis-Lebrun-1.jpg" alt="" class="contactimg">
+            <article class="tarjeta_contacto">
+                <h3>Contactanos</h3>
+                <input type="text" name="nombre" placeholder="Nombre">
+                <input type="text" name="apellido" placeholder="Apellido">
+                <input type="text" name="email" placeholder="Email">
+                <input type="text" name="telefono" placeholder="Telefono">
+                <input type="text" class="msj" name="mensaje" placeholder="Mensaje">
+                <button>Enviar</button>
+            </article>
+        </div>
+
+        <div id="ubicaciones">
+            <h1 class="plan_text">Ubicaciones</h1>
+            <div class="contenedor_ubicaciones">
+                <div class="arriba">
+                    <div class="salinas">
+                        <div class="info_ubicaciones">
+                            <h2>Centro Militar de Salinas</h2>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.7363119403453!2d-55.84607722352345!3d-34.787412967224064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959ff52da249a313%3A0x2304c7492086c207!2sCentro%20Militar%20Salinas!5e0!3m2!1ses-419!2suy!4v1748204451939!5m2!1ses-419!2suy" width="500" height="300" style="border-radius: 20px; border: 0cap;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade";></iframe>
+                            <h3 class="horarios">Horarios:</h3>
+                            <ul>
+                                <li>Lunes: 14 a 17hs</li>
+                                <li>Martes: 14 a 17hs</li>
+                                <li>Sabado: 9 a 12hs</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="iglesia">
+                        <div class="info_ubicaciones">
+                            <h2>Iglesia</h2>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3273.9388144431505!2d-56.046241300000005!3d-34.8577647!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f87ca61dd62d7%3A0xb888df53af0653b1!2sLa%20Iglesia%20de%20Jesucristo%20de%20los%20Santos%20de%20los%20%C3%9Altimos%20D%C3%ADas!5e0!3m2!1ses-419!2suy!4v1748205091657!5m2!1ses-419!2suy" width="500" height="300" style="border-radius: 20px; border: 0cap;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <h3 class="horarios">Horarios:</h3>
+                            <ul>
+                                <li>Sabado: 15 a 18hs</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="abajo">
+                    <div class="hogar_hungaro">
+                        <div class="info_ubicaciones">
+                            <h2>Hogar Hungaro</h2>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.7535494914296!2d-56.16477492351974!3d-34.8875344725439!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f805770f0a6fb%3A0x126d3e441308a940!2sHogar%20H%C3%BAngaro%20del%20Uruguay!5e0!3m2!1ses-419!2suy!4v1748208172100!5m2!1ses-419!2suy" width="500" height="300" style="border-radius:20px; border: 0cap;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <h3 class="horarios">Horarios:</h3>
+                            <ul>
+                                <li>Miercoles: 19:30 a 21:30hs</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="parque_delplata">
+                        <div class="info_ubicaciones">
+                            <h2>Parque del Plata: Casa Particular</h2>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1639.0283313268558!2d-55.71137127231347!3d-34.75416543834821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959ff700884261ff%3A0x56ca5e990127a5cf!2sC.%2024%2013%2C%2015300%20Parque%20del%20Plata%2C%20Departamento%20de%20Canelones!5e0!3m2!1ses-419!2suy!4v1748393790341!5m2!1ses-419!2suy" width="500" height="300" style="border-radius: 20px; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <h3 class="horarios">Horarios:</h3>
+                            <ul>
+                                <li>Martes: 17:30 a 19:30</li>
+                                <li>Jueves: 17:30 a 19:30</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
-      <script src="main.js"></script>
-  </body>
+    <footer>
+        <div class="sedes">
+            <h3>📍 Nuestras sedes:</h3>
+            <div class="footera">
+                <p class="info_footer">Centro Militar Salinas: Ruta 10 &, 15100 Salinas, Departamento de Canelones</p>
+                <p class="info_footer">Parque del Plata: C. 24 13, 15300 Parque del Plata, Departamento de Canelones</p>
+            </div>
+            <div class="footerb">
+                <p class="info_footer">Av. Gral. José Garibaldi 2631, 11600 Montevideo, Departamento de Montevideo</p>
+                <p class="info_footer">Camino Carrasco y, 90000 Ciudad de la Costa, Departamento de Canelones</p>
+            </div>
+        </div>
+        <div class="redes_sociales">
+            <h3>Seguinos en nuestras redes sociales</h3>
+            <figure>
+                <img class="imgi" src="instagram-icon-png-transparent--a8ec508b37-removebg-preview.png" alt="">
+                <figcaption><a href="https://www.instagram.com/ping_pong_academy_uru/">Instagram</a></figcaption>
+            </figure>
+            <figure>
+                <img class="imgt" src="tiktok-logo-tiktok-social-media-icon-free-png.webp" alt="">
+                <figcaption><a href="https://www.tiktok.com/@ping.pong.academy.uru">Tiktok</a></figcaption>
+            </figure>
+            <figure>
+                <img class="imgf" src="Imagen_de_WhatsApp_2025-06-01_a_las_14.30.02_a6051547-removebg-preview.png" alt="">
+                <figcaption><a href="https://www.facebook.com/profile.php?id=61575080571143">Facebook</a></figcaption>
+            </figure>
+        </div>
+        
+    </footer>
+</body>
 </html>
